# multi-camera-deeptam

./: .gitignore  .gitmodules  README.md  install.sh  setup.py
dataset/: README.md  airsim_fly.py  download_suncg.py  save_depth_pfm_to_png.py
dataset/suncg/: pygame_client.py  readme_generalsetup.md  sensors.yml  sim_args.py
dataset_collection/: README.md
dataset_collection/airsim/: airsim_collection.py  airsim_fly.py  settings.json
dataset_collection/minos/: pygame_client.py
deeptam_py/: README.md  setup.py
lib/: setup.py
lib/deeptam_tracker/: README.md  __init__.py  tracker.py
lib/deeptam_tracker/evaluation/: metrics.py  multicam_sequence.py  rgbd_sequence.py
lib/deeptam_tracker/evaluation/rgbd_benchmark/: associate.py  evaluate_ate.py  evaluate_rpe.py
lib/deeptam_tracker/models/: blocks.py  helpers.py  networks.py  networks_base.py
lib/deeptam_tracker/utils/: datatypes.py  helpers.py  message.py  parser.py  rotation_conversion.py  view_utils.py  vis_utils.py
lib/multicam_tracker/: multicam_tracker.py  pose_fusion.py  single_cam_tracker.py
lib/multicam_tracker/utils/: parser.py  visualizer.py
resources/data/: sample_config.yaml
resources/hyperparameters/: freiburg1_config.yaml
resources/hyperparameters/airsim/: airsim_config.yaml  left_cam.yaml  right_cam.yaml
resources/hyperparameters/checkerboard1/: cam_0.yaml  cam_2.yaml  cam_6.yaml
resources/hyperparameters/checkerboard2/: cam_0.yaml  cam_2.yaml
resources/hyperparameters/checkerboard3/: cam_4.yaml
resources/hyperparameters/checkerboard4/: cam_6.yaml
resources/hyperparameters/cvg_cameras/checkerboard1/: cam_4.yaml
resources/hyperparameters/cvg_cameras/checkerboard2/: cam_4.yaml  cam_6.yaml
resources/hyperparameters/cvg_cameras/checkerboard3/: cam_0.yaml  cam_2.yaml  cam_6.yaml
resources/hyperparameters/cvg_cameras/checkerboard4/: cam_0.yaml  cam_2.yaml  cam_4.yaml
resources/hyperparameters/cvg_cameras/vicon1/: cam_0.yaml  cam_2.yaml
resources/hyperparameters/cvg_cameras/vseth-outdoors/: cam_4.yaml
resources/hyperparameters/cvg_cameras/vseth-slow/: cam_0.yaml
resources/hyperparameters/suncg/suncg0/: cam_left.yaml  cam_right.yaml
resources/hyperparameters/suncg/suncg1/: cam_left.yaml  cam_right.yaml
resources/hyperparameters/suncg/suncg2/: cam_left.yaml  cam_right.yaml
resources/hyperparameters/suncg3cameras/: cam_center.yaml  cam_left.yaml  cam_right.yaml  suncg_config.yml
resources/hyperparameters/vseth-outdoors/: cam_0.yaml  cam_2.yaml
resources/hyperparameters/zed_mini/: zed_mini.yaml
scripts/: multi_camera_tracking.py  single_camera_tracking.py
utils/bag_extractor/: README.md  image_cropper.py  preprocess.py  rosbag_extractor.py  rosbag_extractor_zed.py
utils/dataset_collection/: README.md
utils/dataset_collection/airsim/: airsim_collection.py  airsim_fly.py  save_depth_pfm_to_png.py
utils/dataset_collection/airsim/utils/: settings.json
utils/dataset_collection/apriltag/apriltags2_ros/config/: settings.yaml  tags.yaml
utils/dataset_collection/apriltag/apriltags2_ros/launch/: cam_tracking.launch
utils/dataset_collection/apriltag/tfwriter/: CMakeLists.txt  package.xml
utils/dataset_collection/apriltag/tfwriter/include/: typedefs.hpp  uwb_measurement.hpp
utils/dataset_collection/apriltag/tfwriter/src/: tfwriter.cpp
utils/dataset_collection/minos/: pygame_client.py  sim_args.py
utils/dataset_collection/minos/utils/: FirstPersonAgent.js  sensors.yml
utils/evaluation/: .gitignore  multi_cam_plotting.ipynb
